--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
 
         "symfony/framework-bundle":        "~2.3",
         "stof/doctrine-extensions-bundle": "~1.1",
-        "sylius/resource-bundle":          "0.15.*@dev",
-        "sylius/registry":                 "0.15.*@dev",
-        "sylius/taxation":                 "0.15.*@dev"
+        "sylius/resource-bundle":          "0.16.*",
+        "sylius/registry":                 "0.16.*",
+        "sylius/taxation":                 "0.16.*"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1",
@@ -42,9 +42,10 @@
     "autoload-dev": {
         "psr-4": { "Sylius\\Bundle\\TaxationBundle\\spec\\": "spec/" }
     },
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.15-dev"
+            "dev-master": "0.16-dev"
         }
     }
 }
