--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,18 @@
         }
     ],
     "require": {
-        "php":                             ">=5.5.9",
+        "php": ">=5.5.9",
 
-        "symfony/framework-bundle":        "^2.7.5",
         "stof/doctrine-extensions-bundle": "~1.1",
-        "sylius/resource-bundle":          "0.16.*",
-        "sylius/registry":                 "0.16.*",
-        "sylius/taxation":                 "0.16.*"
+        "sylius/registry": "0.16.*",
+        "sylius/taxation": "0.16.*",
+        "sylius/resource-bundle": "0.16.*",
+        "symfony/framework-bundle": "^2.7.5"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1",
-        "doctrine/orm":    "~2.2",
-        "symfony/form":    "~2.3"
+        "doctrine/orm": "~2.2",
+        "symfony/form": "~2.3"
     },
     "config": {
         "bin-dir": "bin"
