Symfony components set up to ^2.7

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "require-dev": {
         "phpspec/phpspec": "~2.1",
         "doctrine/orm": "~2.2",
-        "symfony/form": "~2.3"
+        "symfony/form": "^2.7"
     },
     "config": {
         "bin-dir": "bin"
