Use codes instead of IDs in the REST API for tax rates

--- a/Resources/config/serializer/Model.TaxRate.yml
+++ b/Resources/config/serializer/Model.TaxRate.yml
@@ -33,7 +33,7 @@ Sylius\Component\Taxation\Model\TaxRate:
           href:
                 route: sylius_api_tax_rate_show
                 parameters:
-                    id: expr(object.getId())
+                    code: expr(object.getCode())
         - rel: category
           href:
                 route: sylius_api_tax_category_show
