--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,16 @@
     "require": {
         "php": "^5.6|^7.0",
 
-        "stof/doctrine-extensions-bundle": "~1.1",
+        "stof/doctrine-extensions-bundle": "^1.2",
         "sylius/registry": "^1.0",
-        "sylius/taxation": "^1.0",
         "sylius/resource-bundle": "^1.0",
-        "symfony/framework-bundle": "^2.8"
+        "sylius/taxation": "^1.0",
+        "symfony/framework-bundle": "^3.2@rc"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.1",
-        "doctrine/orm": "^2.4.8",
-        "symfony/form": "^2.8"
+        "doctrine/orm": "^2.5",
+        "phpspec/phpspec": "^3.2",
+        "symfony/form": "^3.2@rc"
     },
     "config": {
         "bin-dir": "bin"
