--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,11 @@
     "require-dev": {
         "doctrine/orm": "^2.5",
         "phpspec/phpspec": "^3.2",
-        "symfony/form": "^3.2@rc"
+        "phpunit/phpunit": "^5.6",
+        "symfony/form": "^3.2@rc",
+        "symfony/browser-kit": "^3.2@rc",
+        "incenteev/composer-parameter-handler": "~2.0",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
     "config": {
         "bin-dir": "bin"
@@ -40,7 +44,10 @@
         "psr-4": { "Sylius\\Bundle\\TaxationBundle\\": "" }
     },
     "autoload-dev": {
-        "psr-4": { "Sylius\\Bundle\\TaxationBundle\\spec\\": "spec/" }
+        "psr-4": {
+            "Sylius\\Bundle\\TaxationBundle\\spec\\": "spec/",
+            "AppBundle\\": "test/src/AppBundle/"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -53,6 +60,9 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "incenteev-parameters": {
+            "file": "test/app/config/parameters.yml"
         }
     }
 }
