--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
         "sylius/registry": "^1.0",
         "sylius/resource-bundle": "^1.0",
         "sylius/taxation": "^1.0",
-        "symfony/framework-bundle": "^3.2@rc"
+        "symfony/framework-bundle": "^3.2"
     },
     "require-dev": {
         "doctrine/orm": "^2.5",
         "phpspec/phpspec": "^3.2",
         "phpunit/phpunit": "^5.6",
-        "symfony/form": "^3.2@rc",
-        "symfony/browser-kit": "^3.2@rc",
+        "symfony/form": "^3.2",
+        "symfony/browser-kit": "^3.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
