--- a/Resources/config/serializer/Model.TaxRate.yml
+++ b/Resources/config/serializer/Model.TaxRate.yml
@@ -34,8 +34,10 @@ Sylius\Component\Taxation\Model\TaxRate:
                 route: sylius_api_tax_rate_show
                 parameters:
                     code: expr(object.getCode())
+                    version: 1
         - rel: category
           href:
                 route: sylius_api_tax_category_show
                 parameters:
                     id: expr(object.getCategory().getId())
+                    version: 1
