--- a/Resources/config/serializer/Model.TaxCategory.yml
+++ b/Resources/config/serializer/Model.TaxCategory.yml
@@ -32,5 +32,5 @@ Sylius\Component\Taxation\Model\TaxCategory:
           href:
                 route: sylius_api_tax_category_show
                 parameters:
-                    id: expr(object.getId())
+                    code: expr(object.getCode())
                     version: 1
