--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     },
     "require-dev": {
         "doctrine/orm": "^2.5",
+        "matthiasnoback/symfony-dependency-injection-test": "^3.0",
         "phpunit/phpunit": "^7.0",
         "phpspec/phpspec": "^5.0",
         "symfony/form": "^4.4",
