--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,14 @@
     "name": "sylius/taxation-bundle",
     "type": "symfony-bundle",
     "description": "Flexible taxation system for Symfony ecommerce applications.",
-    "keywords": ["tax", "taxes", "taxation", "shop", "webshop", "ecommerce"],
+    "keywords": [
+        "tax",
+        "taxes",
+        "taxation",
+        "shop",
+        "webshop",
+        "ecommerce"
+    ],
     "homepage": "https://sylius.com",
     "license": "MIT",
     "authors": [
@@ -21,49 +28,52 @@
     ],
     "require": {
         "php": "^7.3",
-
-        "stof/doctrine-extensions-bundle": "^1.2",
-        "sylius/registry": "^1.4",
+        "stof/doctrine-extensions-bundle": "^1.4",
+        "sylius/registry": "^1.5",
         "sylius/resource-bundle": "^1.6",
         "sylius/taxation": "^1.6",
         "symfony/framework-bundle": "^4.4"
     },
-    "require-dev": {
-        "doctrine/orm": "^2.5",
-        "matthiasnoback/symfony-dependency-injection-test": "^3.0",
-        "phpunit/phpunit": "^7.0",
-        "phpspec/phpspec": "^6.1",
-        "symfony/form": "^4.4",
-        "symfony/browser-kit": "^4.4",
-        "symfony/dependency-injection": "^4.4",
-        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
-    },
     "conflict": {
         "twig/twig": "^3.0"
+    },
+    "require-dev": {
+        "doctrine/orm": "^2.7",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.1",
+        "phpspec/phpspec": "^6.1",
+        "phpunit/phpunit": "^8.5",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "symfony/browser-kit": "^4.4",
+        "symfony/dependency-injection": "^4.4",
+        "symfony/form": "^4.4"
     },
     "config": {
         "bin-dir": "bin"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.6-dev"
+        }
+    },
     "autoload": {
-        "psr-4": { "Sylius\\Bundle\\TaxationBundle\\": "" }
+        "psr-4": {
+            "Sylius\\Bundle\\TaxationBundle\\": ""
+        }
     },
     "autoload-dev": {
         "psr-4": {
             "Sylius\\Bundle\\TaxationBundle\\spec\\": "spec/"
         },
-        "classmap": ["test/app/AppKernel.php"]
+        "classmap": [
+            "test/app/AppKernel.php"
+        ]
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "repositories": [
         {
             "type": "path",
             "url": "../../*/*"
         }
     ],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.6-dev"
-        }
-    }
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
