Temporiraly lock on Resource 1.6.*

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "php": "^7.3",
         "stof/doctrine-extensions-bundle": "^1.4",
         "sylius/registry": "^1.5",
-        "sylius/resource-bundle": "^1.6",
+        "sylius/resource-bundle": "1.6.*",
         "sylius/taxation": "^1.6",
         "symfony/framework-bundle": "^4.4"
     },
