--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "stof/doctrine-extensions-bundle": "^1.4",
         "sylius/calendar": "^0.3 || ^0.4",
         "sylius/registry": "^1.5",
-        "sylius/resource-bundle": "^1.9 || ^1.10@alpha",
+        "sylius/resource-bundle": "^1.9",
         "sylius/taxation": "^1.12",
         "symfony/framework-bundle": "^5.4 || ^6.0"
     },
