Provide autoconfiguration with attributes for TaxationBundle
Co-authored-by: Felix Fouillet <felix.fouillet@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Sylius\\Bundle\\TaxationBundle\\spec\\": "spec/"
+            "Sylius\\Bundle\\TaxationBundle\\spec\\": "spec/",
+            "Sylius\\Bundle\\TaxationBundle\\Tests\\": "Tests/"
         },
         "classmap": [
             "test/app/AppKernel.php"
