--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
     "require": {
         "php": "^8.2",
         "stof/doctrine-extensions-bundle": "^1.4",
-        "sylius/calendar": "^0.5",
         "sylius/registry": "^1.6",
         "sylius/resource-bundle": "^1.10",
         "sylius/taxation": "^2.0",
+        "symfony/clock": "^6.3.4",
         "symfony/framework-bundle": "^6.3.4"
     },
     "conflict": {
