--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "sylius/registry": "^1.6",
         "sylius/resource-bundle": "^1.10",
         "sylius/taxation": "^2.0",
-        "symfony/framework-bundle": "^5.4.21 || ^6.0"
+        "symfony/framework-bundle": "^6.3.4"
     },
     "conflict": {
         "doctrine/orm": ">= 2.16.0",
@@ -46,9 +46,9 @@
         "phpspec/phpspec": "^7.2",
         "phpunit/phpunit": "^9.5",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
-        "symfony/browser-kit": "^5.4.21 || ^6.0",
-        "symfony/dependency-injection": "^5.4.21 || ^6.0",
-        "symfony/form": "^5.4.21 || ^6.0"
+        "symfony/browser-kit": "^6.3.4",
+        "symfony/dependency-injection": "^6.3.4",
+        "symfony/form": "^6.3.2"
     },
     "config": {
         "allow-plugins": {
